# alter

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: mcp-claude-code-setup.md  mcp-cursor-setup.md
docs/bug-plans/: 01-sync-hard-exit.txt  02-sql-importer-silent-type-downgrade.txt  03-canvas-modify-column-no-validation.txt  04-add-column-fk-no-target-validation.txt  05-validate-invalid-identifiers.txt
examples/saas-starter/: pyproject.toml
examples/saas-starter/alembic/: alembic.ini  env.py
examples/saas-starter/app/: database.py  enums.py  main.py
examples/saas-starter/app/models/: parents.py  starter.py
examples/saas-starter/tests/: test_integration.py  test_round_trip.py
src/alter/: __init__.py  cli.py  diff.py  diff_format.py  errors.py  file_watcher.py  layout.py  mcp_server.py  merge_driver.py  query.py  schema.py  staging.py  types.py  validate.py
src/alter/canvas/: server.py
src/alter/canvas/static/: canvas.js  index.html  style.css
src/alter/data/: demo_schema.alter
src/alter/exporters/: alter_file.py  mermaid.py  sql.py
src/alter/generators/: __init__.py  _surgical.py  base.py  sqlalchemy.py  sqlmodel.py
src/alter/importers/: alter_file.py  database.py  sql.py
src/alter/parsers/: __init__.py  base.py  sqlalchemy.py  sqlmodel.py
src/alter/templates/: ecommerce.alter  saas-base.alter
src/alterdb/: __init__.py
templates/: auth.alter  cms.alter
tests/: test_alembic_wrapper.py  test_bug10_sa_column_type.py  test_bug17_apply_preserve.py  test_bug6_list_any_json.py  test_bug7_table_args.py  test_bug7_unreferenced_enums.py  test_bug8_surgical_preserve.py  test_bug_table_args_tuple.py  test_bugs_v013.py  test_canvas_actions.py  test_canvas_cors.py  test_cli.py  test_diff.py  test_e2e.py  test_enum_routing.py  test_exporters.py  test_generator_sqlalchemy.py  test_generator_sqlmodel.py  test_importer_database.py  test_importers.py  test_layout.py  test_mcp_server.py  test_merge_driver.py  test_migration_sql.py  test_parser_sqlalchemy.py  test_parser_sqlmodel.py  test_query.py  test_round_trip.py  test_schema.py  test_smoke.py  test_staging.py  test_surgical.py  test_sync_from_code.py  test_types.py  test_validate.py
tests/fixtures/: sqlalchemy_models.py
