[project]
name = "saas-starter"
version = "0.1.0"
description = "SaaS starter example for Alter integration tests"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlmodel>=0.0.16",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "uvicorn>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
